fix padding bottom when overflow auto

--- a/src/content/app/tools/blast/components/blast-input-sequences/BlastInputSequences.scss
+++ b/src/content/app/tools/blast/components/blast-input-sequences/BlastInputSequences.scss
@@ -1,6 +1,10 @@
 @import 'src/styles/common';
 
-.blastInputSequences,
+.blastInputSequences {
+  margin-bottom: 90px;
+  width: 860px;
+}
+
 .header {
   width: 860px;
 }
