--- a/src/content/app/tools/blast/components/blast-species-selector/BlastSpeciesSelector.scss
+++ b/src/content/app/tools/blast/components/blast-species-selector/BlastSpeciesSelector.scss
@@ -55,6 +55,7 @@
   background-color: $light-grey;
   border: 1px solid $grey;
   padding: 10px;
+  margin-bottom: 90px;
 
   .checkboxUnchecked {
     margin-top: 0px;
