--- a/src/content/app/tools/blast/views/blast-form/BlastForm.scss
+++ b/src/content/app/tools/blast/views/blast-form/BlastForm.scss
@@ -8,7 +8,7 @@
 
 .mainContainer {
   height: 100%;
-  padding: 0px 65px 90px;
+  padding: 0px 65px;
   overflow: auto;
 }
 
